--- a/osouji.html
+++ b/osouji.html
@@ -21,7 +21,7 @@
     }
 
     .title {
-        font-size: 14px;
+        font-size: 22px;
         font-weight: 400;
         color: #bbb;
         letter-spacing: 3px;
@@ -29,14 +29,14 @@
     }
 
     .streak {
-        font-size: 13px;
+        font-size: 20px;
         color: #999;
         margin-bottom: 36px;
         letter-spacing: 1px;
     }
     .streak strong {
         color: #e8a87c;
-        font-size: 18px;
+        font-size: 26px;
     }
 
     /* === でかいボタン === */
@@ -90,7 +90,7 @@
     }
 
     .praise {
-        font-size: 18px;
+        font-size: 22px;
         font-weight: 700;
         color: #e8a87c;
         opacity: 0;
@@ -124,7 +124,7 @@
     }
 
     .stat-number {
-        font-size: 36px;
+        font-size: 54px;
         font-weight: 900;
         color: #1a1a1a;
         line-height: 1;
@@ -132,7 +132,7 @@
     }
 
     .stat-label {
-        font-size: 11px;
+        font-size: 16px;
         color: #bbb;
         letter-spacing: 2px;
     }
@@ -160,7 +160,7 @@
 
     .chart-title {
         font-family: 'DM Mono', monospace;
-        font-size: 11px;
+        font-size: 16px;
         color: #ccc;
         letter-spacing: 2px;
         text-transform: uppercase;
@@ -173,8 +173,8 @@
 
     .chart-tab {
         font-family: 'DM Mono', monospace;
-        font-size: 10px;
-        padding: 4px 10px;
+        font-size: 15px;
+        padding: 6px 14px;
         border: 1px solid #e0e0e0;
         border-radius: 12px;
         background: none;
@@ -232,15 +232,15 @@
 
     .chart-bar-label {
         font-family: 'DM Mono', monospace;
-        font-size: 9px;
+        font-size: 13px;
         color: #bbb;
     }
 
     .chart-bar-value {
         font-family: 'DM Mono', monospace;
-        font-size: 10px;
+        font-size: 15px;
         color: #999;
-        min-height: 14px;
+        min-height: 20px;
     }
 
     /* === ログ === */
@@ -252,7 +252,7 @@
 
     .log-title {
         font-family: 'DM Mono', monospace;
-        font-size: 11px;
+        font-size: 16px;
         color: #ccc;
         letter-spacing: 2px;
         text-transform: uppercase;
@@ -278,12 +278,12 @@
 
     .log-time {
         font-family: 'DM Mono', monospace;
-        font-size: 11px;
+        font-size: 16px;
         color: #aaa;
     }
 
     .log-praise {
-        font-size: 13px;
+        font-size: 19px;
         color: #555;
         text-align: right;
         max-width: 65%;
@@ -291,14 +291,14 @@
 
     .log-date-header {
         font-family: 'DM Mono', monospace;
-        font-size: 11px;
+        font-size: 16px;
         color: #bbb;
         letter-spacing: 1px;
         padding: 16px 0 6px;
     }
 
     .empty-log {
-        font-size: 14px;
+        font-size: 21px;
         color: #ddd;
         text-align: center;
         padding: 30px 0;
@@ -343,19 +343,19 @@
 <div class="stats-grid">
     <div class="stat-card today">
         <div class="stat-number" id="statToday">0</div>
-        <div class="stat-label">きょう</div>
+        <div class="stat-label">今日</div>
     </div>
     <div class="stat-card week">
         <div class="stat-number" id="statWeek">0</div>
-        <div class="stat-label">こんしゅう</div>
+        <div class="stat-label">今週</div>
     </div>
     <div class="stat-card month">
         <div class="stat-number" id="statMonth">0</div>
-        <div class="stat-label">こんげつ</div>
+        <div class="stat-label">今月</div>
     </div>
     <div class="stat-card year">
         <div class="stat-number" id="statYear">0</div>
-        <div class="stat-label">ことし</div>
+        <div class="stat-label">今年</div>
     </div>
 </div>
 
